--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,234 @@
-
-duckietown-world-daffy
-pipdeptree
-typing-extensions
+absl-py==2.1.0
+actionlib==1.14.0
+aido-protocols-daffy==6.1.1
+angles==1.9.13
+asttokens==2.4.1
+attrs==22.1.0
+backcall==0.2.0
+base58==1.0.3
+beautifulsoup4==4.7.1
+bondpy==1.8.6
+cachetools==5.5.0
+camera-calibration==1.17.0
+camera-calibration-parsers==1.12.0
+carnivalmirror==0.6.2
+catkin==0.8.10
+cbor2==5.4.2.post1
+certifi==2021.5.30
+cffi==1.15.1
+charset-normalizer==3.4.0
+cloudpickle==2.2.0
+coloredlogs==15.0.1
+contourpy==1.1.1
+controller-manager==0.20.0
+controller-manager-msgs==0.20.0
+coverage==6.2
+cv-bridge==1.16.2
+cycler==0.11.0
+Cython==3.0.11
+dataclasses==0.6
+dataclasses-json==0.5.7
+decorator==4.4.2
+diagnostic-analysis==1.11.0
+diagnostic-common-diagnostics==1.11.0
+diagnostic-updater==1.11.0
+-e git+https://github.com/duckietown/gym-duckietown.git@fff88234d37c62336e71d663da5955e84aaf0021#egg=duckietown_gym_daffy
+duckietown-serialization-ds1==1.1.1
+duckietown-world-daffy==6.4.3
+dynamic-reconfigure==1.7.3
+executing==2.1.0
+filelock==3.13.1
+fonttools==4.55.0
+freetype-py==2.2.0
+frozendict==2.3.4
+fsspec==2024.2.0
+future==0.18.2
+gencpp==0.7.0
+geneus==3.0.0
+genlisp==0.4.18
+genmsg==0.6.0
+gennodejs==2.0.2
+genpy==0.6.15
+gltflib==1.0.13
+google-auth==2.36.0
+google-auth-oauthlib==1.0.0
+greenlet==3.1.1
+grpcio==1.68.0
+gym==0.26.2
+gym-notices==0.0.8
+humanfriendly==10.0
+idna==3.10
+image-geometry==1.16.2
+imageio==2.15.0
+importlib-metadata==4.8.3
+importlib_resources==6.4.5
+ipython==7.16.3
+ipython-genutils==0.2.0
+jedi==0.17.2
+Jinja2==3.1.3
+joint-state-publisher==1.15.1
+joint-state-publisher-gui==1.15.1
+jpeg4py==0.1.4
+jsonschema==3.2.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.3.1
+lazy_loader==0.4
+lxml==4.9.1
+Markdown==3.3.7
+MarkupSafe==2.1.5
+marshmallow==3.14.1
+marshmallow-enum==1.5.1
+matplotlib==3.7.5
+matplotlib-inline==0.1.7
+meson==1.5.1
+message-filters==1.17.0
+morphys==1.0
+mpmath==1.3.0
+msgpack==1.1.0
+mypy-extensions==0.4.3
+neovim==0.3.1
+networkx==2.5.1
+nose==1.3.7
+numpy==1.20.0
+oauthlib==3.2.2
+opencv-python==4.6.0.66
+oyaml==1.0
+packaging==24.1
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+pkgutil_resolve_name==1.3.10
+plotly==5.11.0
+prompt-toolkit==3.0.33
+protobuf==5.28.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cid==0.3.0
+py-multibase==1.0.3
+py-multicodec==0.2.1
+py-multihash==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pybase64==1.2.3
+PyContracts3==3.0.2
+pycparser==2.21
+PyGeometry-z6==2.1.4
+pyglet==1.5.27
+Pygments==2.13.0
+pynvim==0.5.0
+PyOpenGL==3.1.0
+pyparsing==3.0.9
+pyrender==0.1.45
+pyrsistent==0.18.0
+python-baseconv==1.2.2
+python-dateutil==2.8.2
+python-qt-binding==0.4.4
+pytz==2022.6
+PyWavelets==1.4.1
+PyYAML==6.0.2
+pyzed==4.2
+pyzmq==24.0.1
+qt-dotgraph==0.4.2
+qt-gui==0.4.2
+qt-gui-cpp==0.4.2
+qt-gui-py-common==0.4.2
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+resource_retriever==1.12.7
+rosbag==1.17.0
+rosboost-cfg==1.15.8
+rosclean==1.15.8
+roscreate==1.15.8
+rosgraph==1.17.0
+roslaunch==1.17.0
+roslib==1.15.8
+roslint==0.12.0
+roslz4==1.17.0
+rosmake==1.15.8
+rosmaster==1.17.0
+rosmsg==1.17.0
+rosnode==1.17.0
+rosparam==1.17.0
+rospy==1.17.0
+rosservice==1.17.0
+rostest==1.17.0
+rostopic==1.17.0
+rosunit==1.15.8
+roswtf==1.17.0
+rpds-py==0.20.1
+rqt-console==0.4.12
+rqt-image-view==0.4.17
+rqt-logger-level==0.4.12
+rqt-moveit==0.5.11
+rqt-reconfigure==0.5.5
+rqt-robot-dashboard==0.5.8
+rqt-robot-monitor==0.5.15
+rqt-runtime-monitor==0.5.10
+rqt-tf-tree==0.6.4
+rqt_action==0.4.9
+rqt_bag==0.5.1
+rqt_bag_plugins==0.5.1
+rqt_dep==0.4.12
+rqt_graph==0.4.14
+rqt_gui==0.5.3
+rqt_gui_py==0.5.3
+rqt_launch==0.4.9
+rqt_msg==0.4.10
+rqt_nav_view==0.5.7
+rqt_plot==0.4.13
+rqt_pose_view==0.5.11
+rqt_publisher==0.4.10
+rqt_py_common==0.5.3
+rqt_py_console==0.4.10
+rqt_robot_steering==0.5.12
+rqt_service_caller==0.4.10
+rqt_shell==0.4.11
+rqt_srv==0.4.9
+rqt_top==0.4.10
+rqt_topic==0.4.13
+rqt_web==0.4.10
+rsa==4.9
+ruff==0.7.2
+scikit-image==0.21.0
+scipy==1.10.1
+sensor-msgs==1.13.1
+six==1.16.0
+smach==2.5.2
+smach-ros==2.5.2
+smclib==1.8.6
+soupsieve==2.3.2.post1
+stack-data==0.6.3
+svgwrite==1.4.3
+sympy==1.13.1
+tenacity==8.1.0
+tensorboard==2.14.0
+tensorboard-data-server==0.7.2
+termcolor==1.1.0
+tf==1.13.2
+tf2-py==0.7.7
+tf2-ros==0.7.7
+tifffile==2023.7.10
+topic-tools==1.17.0
+torch==2.4.1+cpu
+torchaudio==2.4.1+cpu
+torchvision==0.19.1+cpu
+tqdm==4.67.1
+traitlets==4.3.3
+trimesh==3.17.1
+typing-inspect==0.8.0
+typing_extensions==4.9.0
+urllib3==2.2.3
+validate_email==1.3
+varint==1.0.2
+wcwidth==0.2.5
+webcolors==1.11.1
+Werkzeug==3.0.6
+xacro==1.14.18
+xtermcolor==1.3
+zipp==3.6.0
+zuper-commons-z6==6.2.4
+zuper-ipce-z6==6.1.2
+zuper-nodes-z6==6.2.17
+zuper-typing-z6==6.2.3
